syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package trigger_proto;

enum HttpMethod {
  HttpMethod_UNKNOWN = 0;
  HttpMethod_GET = 1;
  HttpMethod_POST = 2;
  HttpMethod_PUT = 3;
  HttpMethod_DELETE = 4;
  HttpMethod_HEAD = 5;
}

enum TriggerStatus {
  TriggerStatus_UNKNOWN = 0;
  TriggerStatus_ACTIVE = 1;
  TriggerStatus_EXPIRED = 2;
  TriggerStatus_PAUSED = 3;
  TriggerStatus_CANCELED = 4;
}

message Cron {
  string cron = 1;
  string timezone = 2;
  // The number of times this trigger should run. A value of 0, means that it never expires
  int64 events_limit = 3;
}

enum RetryPolicy {
  RetryPolicy_UNKNOWN = 0;
  RetryPolicy_SIMPLE = 1;
  RetryPolicy_EXPONENTIAL = 2;
}

enum NotificationType {
  Notifications_UNKNOWN = 0;
  Notifications_SLACK = 1;
}

message EventRetryPolicy {
  optional RetryPolicy policy = 1;
  int32 limit = 2;
  google.protobuf.Duration delay = 3;
  // Only relevant in the exponential policy
  google.protobuf.Duration max_delay = 4;
  repeated NotificationType notifications = 5;
}

message OnStatusHandler {
  // TODO: Needs revision
  repeated NotificationType notifications = 1;
  // A value of zero means that it doesn't get auto cancelled
  int32 auto_cancel_after = 2;
}

message Webhook {
  HttpMethod http_method = 1;
  string url = 2;
}

message Endpoint {
  oneof endpoint {
    Webhook webhook = 1;
    // TODO: Tunnel;
  }
}

message Payload {
  string content_type = 1;
  bytes payload = 2;
}

message RunAt {
  repeated string run_at = 1;
}
message Schedule {
  oneof schedule {
    Cron cron = 1;
    // timepoint defined in iso 8601 format
    RunAt run_at = 2;
  }
}

message Trigger {
  string id = 1;
  string owner_id = 2;
  /// [Future] User supplied identifier, unique per owner account
  optional string reference_id = 3;
  optional string name = 4;
  optional string description = 5;
  google.protobuf.Timestamp created_at = 6;
  // TODO: Explore having multiple endpoints with independent status
  Endpoint endpoint = 7;
  Payload payload = 8;
  map<string, string> headers = 9;
  google.protobuf.Duration timeout = 10;
  Schedule schedule = 11;
  TriggerStatus status = 12;
  OnStatusHandler on_success = 13;
  OnStatusHandler on_failure = 14;
  RetryPolicy event_retry_policy = 15;
}

